# tracescribe

./: .env.example  .gitignore  README.md  pyproject.toml
tests/: test_path_builder.py
tracescribe/: __init__.py  cli.py  config.py  github_client.py  jira_client.py  path_builder.py  prompts.py  renderer.py  reviewer.py
tracescribe/fixtures/: sample_epic.json
tracescribe/llm/: __init__.py  base.py  factory.py  ollama_provider.py
tracescribe/templates/: epic_doc.md.jinja
