[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tracescribe"
version = "0.1.0"
description = "CLI tool that auto-generates Instana Knowledge Center documentation from Jira epics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["instana", "jira", "documentation", "llm", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.12",
    "requests>=2.31",
    "ollama>=0.2",
    "PyGithub>=2.3",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "markdown>=3.6",
]

[project.scripts]
tracescribe = "tracescribe.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracescribe*"]
